--- a/Projects/Playground/Playground.Droid/Resources/layout/Tab1View.axml
+++ b/Projects/Playground/Playground.Droid/Resources/layout/Tab1View.axml
@@ -5,6 +5,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          local:MvxBind="Text Message" />
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="40dp"
+        local:MvxBind="Text UserText" />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
